# flatt

./: .bazelrc  .clang-format  .conanrc  .gitignore  CMakeLists.txt  CMakePresets copy.json  CMakePresets.json  LICENSE  README.md  WORKSPACE  _conanfile.txt  conanfile.py  conanfile.txt  justfile  package-lock.json  package.json  vcpkg-configuration.json  vcpkg.json
bazel/: build_defs.bzl
cmake/: .gitignore  cwake.cmake  env.cmake
cmake/builders/: Dockerfile.linux  Dockerfile.windows  linux-x64-debug  linux-x64-release  win-x64-debug
cmake/conan/profiles/: base  default  win-x64  win-x64-debug  win-x64-release
cmake/presets/: arch.json  base.json  config.json  linux.json  os.json  win.json
cmake/targets/linux-x64/: shell
cmake/targets/win-x64/: shell
cmake/triplets/: linux-x64-debug.cmake  linux-x64-release.cmake
examples/: .gitignore
examples/protocol/template/include/: packets.h.j2  parsers.h.j2  version.h.j2
examples/simple/: ecs.fbs  ecs.json  ecs_flecs.fbs  flatt.lua  project.lua
examples/simple/schema/: packets.fbs
examples/simple/src/: components.cpp  components.h  ecs.h
examples/simple/template/: components.cpp.j2
examples/simple/template/include/: serializer.h.j2
scripts/: build.mjs
src/: hash.cpp  hash.hpp  io.cpp  io.hpp  main.cpp  pch.h  strings.hpp  templates.cpp  templates.hpp
src/lib/: hash.cpp  io.cpp  strings.cpp
src/main/: main.cpp
src/reflection/: reflection.h
src/utils/: hash.h  io.h  strings.h  templates.h
